# polymarket-agent-mvp

./: .gitignore  README.md  config.example.yaml  pyproject.toml
scripts/: init_db.py
src/collector/: market_discovery.py  orderbook.py
src/core/: config.py  runner.py  types.py  utils.py
src/ledger/: schema.py  store.py
src/ops/: logger.py
src/polymarket_agent_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/strategy/: __init__.py  fair_value.py  filters.py  reason_codes.py  signal_generation.py
tests/: test_ledger.py  test_schema_migration.py
